--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PuzzleCrush</string>
     <string name="display_name">Puzzle Crush</string>
     <string name="new_game">New Game</string>
+    <string name="landscape">landscape</string>
 </resources>
